Adding title and exp setup

--- a/pdData_v3.ipynb
+++ b/pdData_v3.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 21st century prediction of fish larvae catch using ML \n",
+    "\n",
+    "## Where: Gulf of Mexico\n",
+    "\n",
+    "# ML training & validation\n",
+    "### What: Catch number of true tuna larvae (Thunnus spp.)\n",
+    "### Time: 2007 - 2010 (Jun-Jul)\n",
+    "### Ocean var: SST, SALT & SSH\n",
+    "\n",
+    "# Prediction\n",
+    "### CMIP6 SSP585 scenario\n",
+    "### Time: 2015 - 2100 (Jun-Jul)\n",
+    "### Ocean var: SST, SALT & SSH"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,8 +42,33 @@
       "\n",
       "\n",
       "\n",
-      "# All requested packages already installed.\n",
+      "## Package Plan ##\n",
       "\n",
+      "  environment location: /srv/conda/envs/notebook\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - bottleneck\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    bottleneck-1.2.1           |py37h3010b51_1001         127 KB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:         127 KB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  bottleneck         conda-forge/linux-64::bottleneck-1.2.1-py37h3010b51_1001\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "bottleneck-1.2.1     | 127 KB    | ##################################### | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n",
       "\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Collecting package metadata (current_repodata.json): done\n",
@@ -41,8 +85,33 @@
       "\n",
       "\n",
       "\n",
-      "# All requested packages already installed.\n",
+      "## Package Plan ##\n",
       "\n",
+      "  environment location: /srv/conda/envs/notebook\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - nc-time-axis\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    nc-time-axis-1.2.0         |             py_0          12 KB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:          12 KB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  nc-time-axis       conda-forge/noarch::nc-time-axis-1.2.0-py_0\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "nc-time-axis-1.2.0   | 12 KB     | ##################################### | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n",
       "\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
