Adding title and exp setup

--- a/pdData_v3.ipynb
+++ b/pdData_v3.ipynb
@@ -16,7 +16,9 @@
     "# Prediction\n",
     "### CMIP6 SSP585 scenario\n",
     "### Time: 2015 - 2100 (Jun-Jul)\n",
-    "### Ocean var: SST, SALT & SSH"
+    "### Ocean var: SST, SALT & SSH\n",
+    "\n",
+    "src=\"files/subdir/image.png\""
    ]
   },
   {
