Adding title and exp setup

--- a/pdData_v3.ipynb
+++ b/pdData_v3.ipynb
@@ -16,9 +16,7 @@
     "# Prediction\n",
     "### CMIP6 SSP585 scenario\n",
     "### Time: 2015 - 2100 (Jun-Jul)\n",
-    "### Ocean var: SST, SALT & SSH\n",
-    "\n",
-    "src=\"files/subdir/image.png\""
+    "### Ocean var: SST, SALT & SSH"
    ]
   },
   {
