--- a/pdData_v3.ipynb
+++ b/pdData_v3.ipynb
@@ -16,9 +16,7 @@
     "# Prediction\n",
     "### CMIP6 SSP585 scenario\n",
     "### Time: 2015 - 2100 (Jun-Jul)\n",
-    "### Ocean var: SST, SALT & SSH\n",
-    "\n",
-    "src=\"Tune.png\""
+    "### Ocean var: SST, SALT & SSH"
    ]
   },
   {
@@ -129,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
